@@ -2,12 +2,11 @@ package dev.toonformat.jtoon.decoder;
 
 import dev.toonformat.jtoon.Delimiter;
 import dev.toonformat.jtoon.util.StringEscaper;
-
+import java.util.Collection;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
-
 import static dev.toonformat.jtoon.util.Constants.LIST_ITEM_MARKER;
 import static dev.toonformat.jtoon.util.Constants.OPEN_BRACKET;
 import static dev.toonformat.jtoon.util.Headers.KEYED_ARRAY_PATTERN;
@@ -17,7 +16,9 @@ import static dev.toonformat.jtoon.util.Headers.KEYED_ARRAY_PATTERN;
  */
 public final class ListItemDecoder {
 
-    private ListItemDecoder() {throw new UnsupportedOperationException("Utility class cannot be instantiated");}
+    private ListItemDecoder() {
+        throw new UnsupportedOperationException("Utility class cannot be instantiated");
+    }
 
     /**
      * Processes a single list array item if it matches the expected depth.
@@ -28,10 +29,10 @@ public final class ListItemDecoder {
      * @param result    the stored result of each list item parse
      * @param context   decode an object to deal with lines, delimiter and options
      */
-    public static void processListArrayItem(String line, int lineDepth, int depth,
-                                            List<Object> result, DecodeContext context) {
+    public static void processListArrayItem(final String line, final int lineDepth, final int depth,
+                                            final Collection<Object> result, final DecodeContext context) {
         if (lineDepth == depth + 1) {
-            String content = line.substring((depth + 1) * context.options.indent());
+            final String content = line.substring((depth + 1) * context.options.indent());
 
             if (content.startsWith(LIST_ITEM_MARKER)) {
                 result.add(parseListItem(content, depth, context));
@@ -52,9 +53,9 @@ public final class ListItemDecoder {
      * @param context decode an object to deal with lines, delimiter and options
      * @return parsed item (scalar value or object)
      */
-    public static Object parseListItem(String content, int depth, DecodeContext context) {
+    static Object parseListItem(final String content, final int depth, final DecodeContext context) {
         // Handle empty item: just "-" or "- "
-        String itemContent;
+        final String itemContent;
         if (content.length() > 2) {
             itemContent = content.substring(2).trim();
         } else {
@@ -70,7 +71,7 @@ public final class ListItemDecoder {
         // Check for standalone array (e.g., "[2]: 1,2")
         if (itemContent.startsWith(OPEN_BRACKET)) {
             // For nested arrays in list items, default to comma delimiter if not specified
-            Delimiter nestedArrayDelimiter = ArrayDecoder.extractDelimiterFromHeader(itemContent, context);
+            final Delimiter nestedArrayDelimiter = ArrayDecoder.extractDelimiterFromHeader(itemContent, context);
             // parseArrayWithDelimiter handles currentLine increment internally
             // For inline arrays, it increments. For multi-line arrays, parseListArray
             // handles it.
@@ -81,17 +82,19 @@ public final class ListItemDecoder {
         }
 
         // Check for keyed array pattern (e.g., "tags[3]: a,b,c" or "data[2]{id}: ...")
-        Matcher keyedArray = KEYED_ARRAY_PATTERN.matcher(itemContent);
+        final Matcher keyedArray = KEYED_ARRAY_PATTERN.matcher(itemContent);
         if (keyedArray.matches()) {
-            String originalKey = keyedArray.group(1).trim();
-            String key = StringEscaper.unescape(originalKey);
-            String arrayHeader = itemContent.substring(keyedArray.group(1).length());
+            final String originalKey = keyedArray.group(1).trim();
+            final String key = StringEscaper.unescape(originalKey);
+            final String arrayHeader = itemContent.substring(keyedArray.group(1).length());
 
             // For nested arrays in list items, default to comma delimiter if not specified
-            Delimiter nestedArrayDelimiter = ArrayDecoder.extractDelimiterFromHeader(arrayHeader, context);
-            List<Object> arrayValue = ArrayDecoder.parseArrayWithDelimiter(arrayHeader, depth + 2, nestedArrayDelimiter, context);
+            final Delimiter nestedArrayDelimiter = ArrayDecoder.extractDelimiterFromHeader(arrayHeader, context);
+            final List<Object> arrayValue = ArrayDecoder.parseArrayWithDelimiter(
+                arrayHeader, depth + 2, nestedArrayDelimiter, context
+            );
 
-            Map<String, Object> item = new LinkedHashMap<>();
+            final Map<String, Object> item = new LinkedHashMap<>();
             item.put(key, arrayValue);
 
             // parseArrayWithDelimiter manages currentLine correctly:
@@ -104,7 +107,7 @@ public final class ListItemDecoder {
             return item;
         }
 
-        int colonIdx = DecodeHelper.findUnquotedColon(itemContent);
+        final int colonIdx = DecodeHelper.findUnquotedColon(itemContent);
 
         // Simple scalar: - value
         if (colonIdx <= 0) {
@@ -113,16 +116,16 @@ public final class ListItemDecoder {
         }
 
         // Object item: - key: value
-        String key = StringEscaper.unescape(itemContent.substring(0, colonIdx).trim());
-        String value = itemContent.substring(colonIdx + 1).trim();
+        final String key = StringEscaper.unescape(itemContent.substring(0, colonIdx).trim());
+        final String value = itemContent.substring(colonIdx + 1).trim();
 
         context.currentLine++;
 
-        Map<String, Object> item = new LinkedHashMap<>();
-        Object parsedValue;
+        final Map<String, Object> item = new LinkedHashMap<>();
+        final Object parsedValue;
         // If no next line exists, handle a simple case
         if (context.currentLine >= context.lines.length) {
-            parsedValue = value.trim().isEmpty() ? new LinkedHashMap<>() : PrimitiveDecoder.parse(value);
+            parsedValue = value.isBlank() ? new LinkedHashMap<>() : PrimitiveDecoder.parse(value);
         } else {
             // List item is at depth + 1, so pass depth + 1 to parseObjectItemValue
             parsedValue = ObjectDecoder.parseObjectItemValue(value, depth + 1, context);
@@ -138,19 +141,20 @@ public final class ListItemDecoder {
      *
      * @param item    the item to parse
      * @param depth   the depth of the item
-     * @param context decode an object to deal with lines, delimiter and options     *
+     * @param context decode an object to deal with lines, delimiter and options
      */
-    private static void parseListItemFields(Map<String, Object> item, int depth, DecodeContext context) {
+    private static void parseListItemFields(final Map<String, Object> item,
+            final int depth, final DecodeContext context) {
         while (context.currentLine < context.lines.length) {
-            String line = context.lines[context.currentLine];
-            int lineDepth = DecodeHelper.getDepth(line, context);
+            final String line = context.lines[context.currentLine];
+            final int lineDepth = DecodeHelper.getDepth(line, context);
 
             if (lineDepth < depth + 2) {
                 return;
             }
 
             if (lineDepth == depth + 2) {
-                String fieldContent = line.substring((depth + 2) * context.options.indent());
+                final String fieldContent = line.substring((depth + 2) * context.options.indent());
 
                 // Try to parse as a keyed array first, then as a key-value pair
                 boolean wasParsed = KeyDecoder.parseKeyedArrayField(fieldContent, item, depth, context);
